# lerobot-policy-act-smooth

./: .gitignore  CLAUDE.md  README.md  flake.nix  pyproject.toml
examples/: hello.py  record.sh  teleoperate.sh
experiments/2026-02-07_22-05-improve-chunk-continuity/: README.md  env.sh  synthesis.md
experiments/2026-02-07_22-05-improve-chunk-continuity/01-baseline/: report.md  run.sh
experiments/2026-02-07_22-05-improve-chunk-continuity/02-boundary-loss/: report.md  run.sh
experiments/2026-02-07_22-05-improve-chunk-continuity/03-no-proprioception/: report.md  run.sh
experiments/2026-02-07_22-05-improve-chunk-continuity/04-prefix-noise/: report.md  run.sh
experiments/2026-02-07_22-05-improve-chunk-continuity/05-best-combination/: run.sh
experiments/2026-02-08_train-improvements/: README.md
plans/: act-smooth-history-prefix.md
scripts/: downsample_dataset.py  eval.sh  homing.sh  measure_gt_kinematics.py  replay.sh  teleoperate.sh  train-act-smooth-ablations.sh  train-act-smooth-sweep-delays.sh  train-act-smooth.sh  train-act-vanilla.sh
scripts/analyze/: analyze_delay_sensitivity.py  analyze_rerun.py  utils_plotting.py
scripts/eval/: __init__.py  eval_async_discard.py  eval_async_rtc.py  eval_async_smooth.py  eval_offline_replay.py  eval_sync.py  eval_sync_discard.py  utils_rerun.py
scripts/eval-plots/: plot_delay_sensitivity.py  plot_from_rerun.py
scripts/shared/: homing.py
src/lerobot_policy_act_smooth/: __init__.py  configuration_act_smooth.py  modeling_act_smooth.py  processor_act_smooth.py
tests/: conftest.py  test_eval_async_smooth.py
(+36 files in other folders)
